--- a/linting-scripts/python-lint.yml
+++ b/linting-scripts/python-lint.yml
@@ -1,6 +1,6 @@
 ---
 name: YamlValidations
-'on':
+on:
   push:
     branches:
       - '**'
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Installing Dependencies
         run: |
-          pyhon -m pip install --upgrade pip
+          python -m pip install --upgrade pip
             pip install pylint
             pip install umsgpack
             pip install cryptography
