changes in the pyhton lint file

--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Installing Dependencies
         run: |
-          pyhon -m pip install --upgrade pip
+          python -m pip install --upgrade pip
             pip install pylint
             pip install umsgpack
             pip install cryptography
